--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -19,6 +19,7 @@ tags: ["draft"]
 - Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details) 
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-- PaloAlto -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
- 
+- PaloAlto 
+    - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+    - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 ### Upgrade Notices
