--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -12,6 +12,10 @@ tags: ["draft"]
 
 ## v6.2.0 (TBD)
 
+### Backward incompatible changes
+
+- Tables for Cisco APIC (endpoint group contracts, applications, bridge domains and controllers) have `siteName` and `hostname` columns replaced by `apiUrl` string column.
+
 ### Noticeable changes
 - Limiting the number of the Discovery services restarts -- only 1 restart per service is allowed (previously unlimited). Crashed service will impact the IP Fabric ability to finish running discovery or start a new one. Investigation of the cause of the restart is advised.
 
